[WEB] Fix scrollbar mobile

--- a/Interface/WEB/Mur_Vegetal/wwwroot/css/usersite/admin/admin.css
+++ b/Interface/WEB/Mur_Vegetal/wwwroot/css/usersite/admin/admin.css
@@ -47,8 +47,7 @@ body {
 
 .main-body {
     display: flex;
-    overflow: auto;
-    height: calc(100% - 40px);
+    height: calc(100% - 43px);
 }
 
 
